--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-Google colab
+Google colab:
 
-https://colab.research.google.com/drive/1qrk32uqFQ3tcTEFIbUD1BKMI7OfPxjbu#scrollTo=YpjzCvOBmMLu
+https://colab.research.google.com/drive/1tVqS5px38qUIYlB5uCJcq22bEyG3fWiL?usp=sharing
 
